// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toast should render a toast 1`] = `
.glamor-0,
[data-glamor-0] {
  max-width: 22.5rem;
  margin: 0.375rem;
  padding-top: 0.75rem;
  padding-right: 1.125rem;
  padding-bottom: 0.75rem;
  padding-left: 1.125rem;
  pointer-events: auto;
  border-radius: 2px;
  font-weight: 500;
  cursor: pointer;
  box-shadow: 0 1px 4px 1px rgba(50, 52, 58, 0.13);
  color: #2b303b;
  background-color: #fff;
}

<div
  className="glamor-0"
  onClick={[Function]}
  style={
    Object {
      "WebkitTransform": "translate3d(100%, 0, 0)",
      "opacity": 0,
      "transform": "translate3d(100%, 0, 0)",
    }
  }
>
  I am a toast!
</div>
`;

exports[`Toast should render take a text prop 1`] = `
.glamor-0,
[data-glamor-0] {
  max-width: 22.5rem;
  margin: 0.375rem;
  padding-top: 0.75rem;
  padding-right: 1.125rem;
  padding-bottom: 0.75rem;
  padding-left: 1.125rem;
  pointer-events: auto;
  border-radius: 2px;
  font-weight: 500;
  cursor: pointer;
  box-shadow: 0 1px 4px 1px rgba(50, 52, 58, 0.13);
  color: #2b303b;
  background-color: #fff;
}

<div
  className="glamor-0"
  onClick={[Function]}
  style={
    Object {
      "WebkitTransform": "translate3d(100%, 0, 0)",
      "opacity": 0,
      "transform": "translate3d(100%, 0, 0)",
    }
  }
>
  Some message to the user
</div>
`;
